--- a/Wardrobe/Views/Occasions/Delete.cshtml
+++ b/Wardrobe/Views/Occasions/Delete.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.occasionName)
+            @Html.DisplayNameFor(model => model.OccasionName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.occasionName)
+            @Html.DisplayFor(model => model.OccasionName)
         </dd>
 
     </dl>
