--- a/Wardrobe/Views/Occasions/Details.cshtml
+++ b/Wardrobe/Views/Occasions/Details.cshtml
@@ -11,16 +11,16 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.occasionName)
+            @Html.DisplayNameFor(model => model.OccasionName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.occasionName)
+            @Html.DisplayFor(model => model.OccasionName)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.occasionID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.OccasionID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
