--- a/Wardrobe/Views/Bottoms/Delete.cshtml
+++ b/Wardrobe/Views/Bottoms/Delete.cshtml
@@ -12,43 +12,43 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.bottomName)
+            @Html.DisplayNameFor(model => model.Occasion.OccasionName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.bottomName)
+            @Html.DisplayFor(model => model.Occasion.OccasionName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.bottomPhoto)
+            @Html.DisplayNameFor(model => model.Season.seasonName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.bottomPhoto)
+            @Html.DisplayFor(model => model.Season.seasonName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.bottomColor)
+            @Html.DisplayNameFor(model => model.BottomName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.bottomColor)
+            @Html.DisplayFor(model => model.BottomName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.bottomSeason)
+            @Html.DisplayNameFor(model => model.BottomPhoto)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.bottomSeason)
+            @Html.DisplayFor(model => model.BottomPhoto)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.bottomOccasion)
+            @Html.DisplayNameFor(model => model.BottomColor)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.bottomOccasion)
+            @Html.DisplayFor(model => model.BottomColor)
         </dd>
 
     </dl>
