--- a/Wardrobe/Views/Occasions/Create.cshtml
+++ b/Wardrobe/Views/Occasions/Create.cshtml
@@ -16,10 +16,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.occasionName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.OccasionName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.occasionName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.occasionName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.OccasionName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.OccasionName, "", new { @class = "text-danger" })
             </div>
         </div>
 
