--- a/Wardrobe/Views/Occasions/Edit.cshtml
+++ b/Wardrobe/Views/Occasions/Edit.cshtml
@@ -15,13 +15,13 @@
         <h4>Occasion</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.occasionID)
+        @Html.HiddenFor(model => model.OccasionID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.occasionName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.OccasionName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.occasionName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.occasionName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.OccasionName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.OccasionName, "", new { @class = "text-danger" })
             </div>
         </div>
 
