--- a/Wardrobe/Views/Outfits/Details.cshtml
+++ b/Wardrobe/Views/Outfits/Details.cshtml
@@ -11,40 +11,40 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.topOutfit)
+            @Html.DisplayNameFor(model => model.Bottom.BottomName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.topOutfit)
+            @Html.DisplayFor(model => model.Bottom.BottomName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.bottomOutfit)
+            @Html.DisplayNameFor(model => model.Shoe.ShoeName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.bottomOutfit)
+            @Html.DisplayFor(model => model.Shoe.ShoeName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.shoesOutfit)
+            @Html.DisplayNameFor(model => model.Top.TopName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.shoesOutfit)
+            @Html.DisplayFor(model => model.Top.TopName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.accessoriesOutfit)
+            @Html.DisplayNameFor(model => model.AccessoryOutfitID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.accessoriesOutfit)
+            @Html.DisplayFor(model => model.AccessoryOutfitID)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.outfitID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.OutfitID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
