--- a/Wardrobe/Views/Outfits/Edit.cshtml
+++ b/Wardrobe/Views/Outfits/Edit.cshtml
@@ -15,37 +15,37 @@
         <h4>Outfit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.outfitID)
+        @Html.HiddenFor(model => model.OutfitID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.topOutfit, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TopOutfitID, "TopOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.topOutfit, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.topOutfit, "", new { @class = "text-danger" })
+                @Html.DropDownList("TopOutfitID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.TopOutfitID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.bottomOutfit, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BottomOutfitID, "BottomOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.bottomOutfit, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.bottomOutfit, "", new { @class = "text-danger" })
+                @Html.DropDownList("BottomOutfitID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.BottomOutfitID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.shoesOutfit, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ShoeOutfitID, "ShoeOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.shoesOutfit, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.shoesOutfit, "", new { @class = "text-danger" })
+                @Html.DropDownList("ShoeOutfitID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ShoeOutfitID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.accessoriesOutfit, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AccessoryOutfitID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.accessoriesOutfit, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.accessoriesOutfit, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.AccessoryOutfitID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.AccessoryOutfitID, "", new { @class = "text-danger" })
             </div>
         </div>
 
