--- a/Wardrobe/Views/Outfits/Index.cshtml
+++ b/Wardrobe/Views/Outfits/Index.cshtml
@@ -12,16 +12,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.topOutfit)
+            @Html.DisplayNameFor(model => model.Bottom.BottomName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.bottomOutfit)
+            @Html.DisplayNameFor(model => model.Shoe.ShoeName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.shoesOutfit)
+            @Html.DisplayNameFor(model => model.Top.TopName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.accessoriesOutfit)
+            @Html.DisplayNameFor(model => model.AccessoryOutfitID)
         </th>
         <th></th>
     </tr>
@@ -29,21 +29,21 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.topOutfit)
+            @Html.DisplayFor(modelItem => item.Bottom.BottomName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.bottomOutfit)
+            @Html.DisplayFor(modelItem => item.Shoe.ShoeName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.shoesOutfit)
+            @Html.DisplayFor(modelItem => item.Top.TopName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.accessoriesOutfit)
+            @Html.DisplayFor(modelItem => item.AccessoryOutfitID)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.outfitID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.outfitID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.outfitID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.OutfitID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.OutfitID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.OutfitID })
         </td>
     </tr>
 }
