--- a/Wardrobe/Views/Shoes/Delete.cshtml
+++ b/Wardrobe/Views/Shoes/Delete.cshtml
@@ -12,43 +12,43 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.shoeName)
+            @Html.DisplayNameFor(model => model.Occasion.OccasionName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.shoeName)
+            @Html.DisplayFor(model => model.Occasion.OccasionName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.shoePhoto)
+            @Html.DisplayNameFor(model => model.Season.seasonName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.shoePhoto)
+            @Html.DisplayFor(model => model.Season.seasonName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.shoeColor)
+            @Html.DisplayNameFor(model => model.ShoeName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.shoeColor)
+            @Html.DisplayFor(model => model.ShoeName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.shoeSeason)
+            @Html.DisplayNameFor(model => model.ShoePhoto)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.shoeSeason)
+            @Html.DisplayFor(model => model.ShoePhoto)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.shoeOccasion)
+            @Html.DisplayNameFor(model => model.ShoeColor)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.shoeOccasion)
+            @Html.DisplayFor(model => model.ShoeColor)
         </dd>
 
     </dl>
