--- a/Wardrobe/Views/Shoes/Edit.cshtml
+++ b/Wardrobe/Views/Shoes/Edit.cshtml
@@ -15,45 +15,45 @@
         <h4>Shoe</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.shoeID)
+        @Html.HiddenFor(model => model.ShoeID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.shoeName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ShoeName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.shoeName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.shoeName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ShoeName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ShoeName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.shoePhoto, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ShoePhoto, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.shoePhoto, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.shoePhoto, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ShoePhoto, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ShoePhoto, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.shoeColor, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ShoeColor, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.shoeColor, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.shoeColor, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ShoeColor, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ShoeColor, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.shoeSeason, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SeasonID, "SeasonID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.shoeSeason, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.shoeSeason, "", new { @class = "text-danger" })
+                @Html.DropDownList("SeasonID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.SeasonID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.shoeOccasion, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.OccasionID, "OccasionID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.shoeOccasion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.shoeOccasion, "", new { @class = "text-danger" })
+                @Html.DropDownList("OccasionID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.OccasionID, "", new { @class = "text-danger" })
             </div>
         </div>
 
