--- a/Wardrobe/Views/Outfits/Delete.cshtml
+++ b/Wardrobe/Views/Outfits/Delete.cshtml
@@ -36,6 +36,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.OutfitName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.OutfitName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.AccessoryOutfitID)
         </dt>
 
