--- a/Wardrobe/Views/Outfits/Details.cshtml
+++ b/Wardrobe/Views/Outfits/Details.cshtml
@@ -10,21 +10,15 @@
     <h4>Outfit</h4>
     <hr />
     <dl class="dl-horizontal">
+        
         <dt>
-            @Html.DisplayNameFor(model => model.Bottom.BottomName)
+            @Html.DisplayNameFor(model => model.OutfitName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Bottom.BottomName)
+            @Html.DisplayFor(model => model.OutfitName)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Shoe.ShoeName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Shoe.ShoeName)
-        </dd>
+      
 
         <dt>
             @Html.DisplayNameFor(model => model.Top.TopName)
@@ -33,7 +27,21 @@
         <dd>
             @Html.DisplayFor(model => model.Top.TopName)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Bottom.BottomName)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.Bottom.BottomName)
+        </dd>
+       
+        <dt>
+            @Html.DisplayNameFor(model => model.Shoe.ShoeName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Shoe.ShoeName)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.AccessoryOutfitID)
         </dt>
