--- a/Wardrobe/Views/Outfits/Edit.cshtml
+++ b/Wardrobe/Views/Outfits/Edit.cshtml
@@ -18,6 +18,14 @@
         @Html.HiddenFor(model => model.OutfitID)
 
         <div class="form-group">
+            @Html.LabelFor(model => model.OutfitName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.OutfitName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.OutfitName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.TopOutfitID, "TopOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("TopOutfitID", null, htmlAttributes: new { @class = "form-control" })
