--- a/Wardrobe/Views/Outfits/Index.cshtml
+++ b/Wardrobe/Views/Outfits/Index.cshtml
@@ -12,13 +12,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Bottom.BottomName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Shoe.ShoeName)
+            @Html.DisplayNameFor(model => model.OutfitName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Top.TopName)
+        </th>
+        <th>
+           @Html.DisplayNameFor(model => model.Bottom.BottomName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Shoe.ShoeName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.AccessoryOutfitID)
@@ -36,6 +39,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Top.TopName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.OutfitName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.AccessoryOutfitID)
