--- a/Wardrobe/Views/Outfits/Edit.cshtml
+++ b/Wardrobe/Views/Outfits/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Wardrobe.Models.Outfit
+﻿
+@model Wardrobe.ViewController.OutfitViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -15,46 +16,48 @@
         <h4>Outfit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.OutfitID)
+
+        @* Change model. to model.Outfit. *@
+        @Html.HiddenFor(model => model.Outfit.OutfitID)
+        
 
         <div class="form-group">
-            @Html.LabelFor(model => model.OutfitName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Outfit.OutfitName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.OutfitName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OutfitName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Outfit.OutfitName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Outfit.OutfitName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TopOutfitID, "TopOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Outfit.TopOutfitID, "TopOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TopOutfitID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TopOutfitID, "", new { @class = "text-danger" })
+                @*@Html.DropDownList("TopOutfitID", null, htmlAttributes: new { @class = "form-control" })*@
+                @Html.DropDownListFor(model => model.Outfit.TopOutfitID, (SelectList)ViewBag.TopId, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Outfit.TopOutfitID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BottomOutfitID, "BottomOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Outfit.BottomOutfitID, "BottomOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("BottomOutfitID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.BottomOutfitID, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.Outfit.BottomOutfitID, (SelectList)ViewBag. BottomId, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Outfit.BottomOutfitID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ShoeOutfitID, "ShoeOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Outfit.ShoeOutfitID, "ShoeOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ShoeOutfitID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ShoeOutfitID, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.Outfit.ShoeOutfitID, (SelectList)ViewBag.ShoeId, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Outfit.ShoeOutfitID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AccessoryOutfitID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SelectedAccessories, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AccessoryOutfitID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AccessoryOutfitID, "", new { @class = "text-danger" })
-            </div>
+                @Html.ListBoxFor(model => model.SelectedAccessories, Model.AllAccessories)
         </div>
 
         <div class="form-group">
@@ -63,6 +66,7 @@
             </div>
         </div>
     </div>
+</div>
 }
 
 <div>
