--- a/Wardrobe/Views/Outfits/Create.cshtml
+++ b/Wardrobe/Views/Outfits/Create.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Outfit</h4>
         <hr />
@@ -50,18 +50,36 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Outfit.SeasonOutfitID, "SeasonOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Outfit.SeasonOutfitID, (SelectList)ViewBag.SeasonOutfitID, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Outfit.SeasonOutfitID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Outfit.OccasionOutfitID, "OccasionOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Outfit.OccasionOutfitID, (SelectList)ViewBag.OccasionOutfitID, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Outfit.OccasionOutfitID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.SelectedAccessories, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.ListBoxFor(model => model.SelectedAccessories, Model.AllAccessories)
             </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
-                </div>
+        
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
+    </div>
         </div>
+
+        
 }
 
 <div>
