--- a/Wardrobe/Views/Outfits/Edit.cshtml
+++ b/Wardrobe/Views/Outfits/Edit.cshtml
@@ -55,6 +55,21 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Outfit.SeasonOutfitID, "SeasonOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Outfit.SeasonOutfitID, (SelectList)ViewBag.SeasonID, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Outfit.SeasonOutfitID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Outfit.OccasionOutfitID, "OccasionOutfitID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Outfit.OccasionOutfitID, (SelectList)ViewBag.OccasionID, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Outfit.OccasionOutfitID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.SelectedAccessories, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.ListBoxFor(model => model.SelectedAccessories, Model.AllAccessories)
